--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<section class="hero">
 				<div class="container">
 					<h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-					<button class="button" type="button">Замовити послугу</button>
+					<button class="button" type="button" data-modal-open>Замовити послугу</button>
 				</div>
 			</section>
 			<section class="features">
@@ -226,54 +226,54 @@
 				</div>
 			</section>
 			<section class="section clients">
-        <div class="container">
-          <h2 class="about-title">Постійні клієнти</h2>
-          <ul class="clients-list">
-            <li class="clients-card">
-              <a class="clients-link" href="#">
-                <svg class="clients-icon" width="106" height="60">
-                  <use href="./img/icons.svg#icon-company1"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="clients-card">
-              <a class="clients-link" href="#">
-                <svg class="clients-icon" width="106" height="60">
-                  <use href="./img/icons.svg#icon-company2"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="clients-card">
-              <a class="clients-link" href="#">
-                <svg class="clients-icon" width="106" height="60">
-                  <use href="./img/icons.svg#icon-company3"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="clients-card">
-              <a class="clients-link" href="#">
-                <svg class="clients-icon" width="106" height="60">
-                  <use href="./img/icons.svg#icon-company4"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="clients-card">
-              <a class="clients-link" href="#">
-                <svg class="clients-icon" width="106" height="60">
-                  <use href="./img/icons.svg#icon-company5"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="clients-card">
-              <a class="clients-link" href="#">
-                <svg class="clients-icon" width="106" height="60">
-                  <use href="./img/icons.svg#icon-company6"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </section>
+				<div class="container">
+					<h2 class="about-title">Постійні клієнти</h2>
+					<ul class="clients-list">
+						<li class="clients-card">
+								<a class="clients-link" href="#">
+									<svg class="clients-icon" width="106" height="60">
+										<use href="./img/icons.svg#icon-company1"></use>
+									</svg>
+								</a>
+						</li>
+						<li class="clients-card">
+							<a class="clients-link" href="#">
+								<svg class="clients-icon" width="106" height="60">
+									<use href="./img/icons.svg#icon-company2"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="clients-card">
+							<a class="clients-link" href="#">
+								<svg class="clients-icon" width="106" height="60">
+									<use href="./img/icons.svg#icon-company3"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="clients-card">
+							<a class="clients-link" href="#">
+								<svg class="clients-icon" width="106" height="60">
+									<use href="./img/icons.svg#icon-company4"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="clients-card">
+							<a class="clients-link" href="#">
+								<svg class="clients-icon" width="106" height="60">
+									<use href="./img/icons.svg#icon-company5"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="clients-card">
+							<a class="clients-link" href="#">
+								<svg class="clients-icon" width="106" height="60">
+									<use href="./img/icons.svg#icon-company6"></use>
+								</svg>
+							</a>
+						</li>
+					</ul>
+				</div>
+      		</section>
 		</main>
 		<footer class="footer">
 			<div class="container">
@@ -328,5 +328,16 @@
 				</div>
 			</div>
 		</footer>
+		<div class="backdrop is-hidden" data-modal>
+			<div class="modal">
+				<button type="button" class="modal-close" data-modal-close>
+					<svg class="icon-close-btn" width="18" height="18">
+						<use href="./img/icons.svg#icon-close-btn">
+						</use>
+					</svg>
+				</button>
+			</div>
+		</div>
+		<script src="./js/modal.js"></script>
 	</body>
 </html>
