--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 				</a>
 			<nav class="navigation">
 				<ul class="header-nav">
-					<li><a class="header-nav-link-curent" href="./index.html">Студія</a></li>
-					<li><a class="header-nav-link" href="./portfolio.html">Портфоліо</a></li>
-					<li><a class="header-nav-link" href="#">Контакти</a></li>
+					<li class="header-nav-item"><a class="header-nav-link-curent" href="./index.html">Студія</a></li>
+					<li class="header-nav-item"><a class="header-nav-link" href="./portfolio.html">Портфоліо</a></li>
+					<li class="header-nav-item"><a class="header-nav-link" href="#">Контакти</a></li>
 				</ul>
 			</nav>
 			<ul class="header-contact">
