--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
 						<li class="portfolio-examples-list">
 							<a class="portfolio-links" href="#">
 								<div class="portfolio-top-wrap">
-									<img src="./img/technocrack.jpg" alt="Веб сайт Технокряк" width="370" height="294" />
+									<img src="./img/technocrack.jpg" alt="Веб сайт Технокряк" width="370" height="294">
 									<p class="portfolio-top-text">
 										Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні
 										відомості про компанію чи приватну особу.
@@ -73,7 +73,7 @@
 						<li class="portfolio-examples-list">
 							<a class="portfolio-links" href="#">
 								<div class="portfolio-top-wrap">
-									<img src="./img/poster-new-orlean.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294" />
+									<img src="./img/poster-new-orlean.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
 									<p class="portfolio-top-text">
 										Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні
 										відомості про компанію чи приватну особу.
@@ -88,7 +88,7 @@
 						<li class="portfolio-examples-list">
 							<a class="portfolio-links" href="#">
 								<div class="portfolio-top-wrap">
-									<img src="./img/rest-seafood.jpg" alt="Логотип ресторану Seafood" width="370" height="294" />
+									<img src="./img/rest-seafood.jpg" alt="Логотип ресторану Seafood" width="370" height="294">
 									<p class="portfolio-top-text">
 										Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні
 										відомості про компанію чи приватну особу.
@@ -103,7 +103,7 @@
 						<li class="portfolio-examples-list">
 							<a class="portfolio-links" href="#">
 								<div class="portfolio-top-wrap">
-									<img src="./img/project-prime.jpg" alt="Проєкт Prime" width="370" height="294" />
+									<img src="./img/project-prime.jpg" alt="Проєкт Prime" width="370" height="294">
 									<p class="portfolio-top-text">
 										Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні
 										відомості про компанію чи приватну особу.
@@ -118,7 +118,7 @@
 						<li class="portfolio-examples-list">
 							<a class="portfolio-links" href="#">
 								<div class="portfolio-top-wrap">
-									<img src="./img/project-boxes.jpg" alt="Картонні коробки" width="370" height="294" />
+									<img src="./img/project-boxes.jpg" alt="Картонні коробки" width="370" height="294">
 									<p class="portfolio-top-text">
 										Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні
 										відомості про компанію чи приватну особу.
@@ -133,7 +133,7 @@
 						<li class="portfolio-examples-list">
 							<a class="portfolio-links" href="#">
 								<div class="portfolio-top-wrap">
-									<img src="./img/inspirations.jpg" alt="Надхнення немає меж" width="370" height="294" />
+									<img src="./img/inspirations.jpg" alt="Надхнення немає меж" width="370" height="294">
 									<p class="portfolio-top-text">
 										Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні
 										відомості про компанію чи приватну особу.
@@ -148,7 +148,7 @@
 						<li class="portfolio-examples-list">
 							<a class="portfolio-links" href="#">
 								<div class="portfolio-top-wrap">
-									<img src="./img/publication-limited-edition.jpg" alt="Видання Limited Edition" width="370" height="294" />
+									<img src="./img/publication-limited-edition.jpg" alt="Видання Limited Edition" width="370" height="294">
 									<p class="portfolio-top-text">
 										Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні
 										відомості про компанію чи приватну особу.
@@ -163,7 +163,7 @@
 						<li class="portfolio-examples-list">
 							<a class="portfolio-links" href="#">
 								<div class="portfolio-top-wrap">
-									<img src="./img/project-lab.jpg" alt="Проєкт LAB" width="370" height="294" />
+									<img src="./img/project-lab.jpg" alt="Проєкт LAB" width="370" height="294">
 									<p class="portfolio-top-text">
 										Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні
 										відомості про компанію чи приватну особу.
@@ -178,7 +178,7 @@
 						<li class="portfolio-examples-list">
 							<a class="portfolio-links" href="#">
 								<div class="portfolio-top-wrap">
-									<img src="./img/growing-business-apk.jpg" alt="Програма для маштабуання бізнесу" width="370" height="294" />
+									<img src="./img/growing-business-apk.jpg" alt="Програма для маштабуання бізнесу" width="370" height="294">
 									<p class="portfolio-top-text">
 										Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні
 										відомості про компанію чи приватну особу.
