правки після зауважень

--- a/index.html
+++ b/index.html
@@ -96,9 +96,12 @@
 				<div class="container">
 					<h2 class="about-title">Чим ми займаємося</h2>
 					<ul class="about-picture">
-						<li class="about-picture-title"><img src="./img/desktop_apk.jpg" alt="стоворення десктопних додатків" width="370" height="294"></li>
-						<li class="about-picture-title"><img src="./img/mobile_apk.jpg" alt="написання мобільних дотатків" width="370" height="294"></li>
-						<li class="about-picture-title"><img src="./img/design_solutions.jpg" alt="дизайн сайтів" width="370" height="294"></li>
+						<li class="about-picture-title"><img src="./img/desktop_apk.jpg" alt="стоворення десктопних додатків" width="370" height="294">
+						<p class="about-picture-text">Десктопні додатки</p></li>
+						<li class="about-picture-title"><img src="./img/mobile_apk.jpg" alt="написання мобільних дотатків" width="370" height="294">
+						<p class="about-picture-text">Мобільні додатки</p></li>
+						<li class="about-picture-title"><img src="./img/design_solutions.jpg" alt="дизайн сайтів" width="370" height="294">
+						<p class="about-picture-text">Дизайнерські рішення</p></li>
 					</ul>
 				</div>
 			</section>
